@@ -1,7 +1,7 @@
 <project name="interpreter" default="run">
 
-  <taskdef classname="JFlex.anttask.JFlexTask" name="jflex" />
-  <taskdef classname="java_cup.AntTask" name="cup" />
+  <taskdef classname="jflex.anttask.JFlexTask" name="jflex" />
+  <taskdef classname="java_cup.anttask.CUPTask" name="cup" />
 
   <target name="build" depends="realclean,compile" />
 
@@ -18,7 +18,7 @@
   </target>
 
   <target name="cup">
-    <cup file="parser.cup" interface="yes" dir="."/>
+    <cup srcfile="parser.cup" interface="yes" destdir="."/>
   </target>
 
   <target name="genclean">
